Improved accelerometer based targeting.  Added screen orientation detection.